--- a/src/_scss/main.scss
+++ b/src/_scss/main.scss
@@ -58,19 +58,19 @@ body {
 
 img,
 video,
-svg {
-	// height: 100%;
-	object-position: center;
-	object-fit: cover;
-}
-
-img,
-video,
 iframe,
 svg {
 	width: 100%;
 	max-height: 100%;
 	user-select: none;
+}
+
+img,
+video,
+svg {
+	height: 100%;
+	object-position: center;
+	object-fit: cover;
 }
 
 img:not([src*="png"]):not([src*="svg"]),
